--- a/client/src/components/SlideDrawer/SongManager/SongManager.css
+++ b/client/src/components/SlideDrawer/SongManager/SongManager.css
@@ -14,15 +14,16 @@
     color: black;
 }
 .songs-account{
-
-    background-color: rgb(17, 15, 15, 0.5);
-    margin-top: 3rem;
+    height:85%;
+    background-color: rgb(0, 0, 61, 0.5);
     border-left: 2px double darkorange;
     border-right: 2px double darkorange;
+    margin-bottom: 1rem;
+    color: lavender;
 }
 
 .songs-list{
-    height: 75%;
+    height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,40 +33,28 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    
 }
 .songs-list-column{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    -ms-overflow-style: none;
+    height: 90%;
+    overflow-y: scroll;
 }
 
 
-.songs-list-column::-webkit-scrollbar {
-    display: none;
-  }
 .aSong{
     width: 80%;
     color: lavender;
-    font-size: 20px;
+    font-size: 15px;
     padding: 5px;
     border-top: 2px double black;
     border-radius: 5px;
-    background-color: rgb(216, 145, 58, 0.7);
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    /* background-color: rgb(216, 145, 58, 0.7); */
+    background-color: lavender;
+    margin-top: 0.1rem;
+    margin-bottom: 0.11rem;
 }
-.song-upload-title{
-    font-size: 24px;
-    color: lavender;
-    width: 90%;
-    background-color: rgb(241, 94, 41, 0.7);
-}
-#songpage-title{
-    width: 100%;
-    background-color: black;
-    color: lavender;
-    border-bottom: 2px double darkorange;
-    padding-top: 0.2rem;
-}
+
