the user can now add songs as well as add photograhs, different songs can also be diplayed successfully, as well as played, next step is to allow one user to interact with the accounts of another user

--- a/client/src/components/SlideDrawer/SongManager/SongManager.css
+++ b/client/src/components/SlideDrawer/SongManager/SongManager.css
@@ -47,7 +47,7 @@
 
 .aSong{
     width: 80%;
-    color: lavender;
+    color: darkblue;
     font-size: 15px;
     padding: 5px;
     border-top: 2px double black;
